<resources>
    <string name="app_name">Books on the Go</string>
    <string name="saved_data_file_key" translatable="false">com.booksonthego.patrick.library.SAVED_DATA</string>
    <string name="KENNEY_SERVER_IP" translatable="false">108.205.143.97:9801</string>

    <string name="server_password">supersecretpassword12345</string>

    <!-- LoginActivity -->
    <string name="error_no_internet">No connection available. Please try again later.</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_invalid_password">Must be 5+ characters</string>
    <string name="prompt_first_name">First Name</string>
    <string name="prompt_last_name">Last Name</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_login">Login</string>
    <string name="prompt_sign_up">Sign Up</string>
    <string name="user_key">User Key</string>
    <string name="last_library_key">Last Library Key</string>
    <string name="last_library_name">Last Library Name</string>
    <string name="error_incorrect_email">No such user exists</string>
    <string name="error_incorrect_password">Password is incorrect</string>

    <!-- CreateAccountActivity -->
    <string name="error_password_match">Passwords must match</string>
    <string name="error_email_duplicate">Email already in use</string>
    <string name="prompt_confirm_password">Confirm Password</string>

    <!-- LibraryLoginActivity -->
    <string name="login_below">Returning Users</string>
    <string name="new_users">New Users</string>
    <string name="prompt_library_password">Library Password</string>
    <string name="prompt_general_sign_up">General Public</string>
    <string name="prompt_teacher_sign_up">Teacher</string>
    <string name="prompt_librarian_sign_up">Librarian</string>
    <string name="user_role">User Role</string>
    <string name="checkout_limit">Checkout Limit</string>
    <string name="user_book_count">User Book Count</string>
    <string name="libraries">Libraries</string>

    <!-- Toolbar -->
    <string name="show_map">Show Map</string>
    <string name="map">Map</string>
    <string name="change_library">Change Library</string>
    <string name="advanced">Advanced</string>
    <string name="report_bug">Report Bug</string>

    <!-- AdvancedMenuActivity -->
    <string name="create_library">Create Library</string>
    <string name="librarians_only">Librarians Only</string>
    <string name="add_book">Add Book</string>
    <string name="checkout_books">Checkout Books</string>
    <string name="prompt_return">Accept Returns</string>

    <!-- CreateBookActivity -->
    <string name="create_book">Create Book</string>
    <string name="prompt_quantity">Quantity (Default 1)</string>
    <string name="prompt_year_published">Year Published</string>
    <string name="prompt_author_last_name">Author Last Name</string>
    <string name="prompt_author_first_name">Author First Name</string>
    <string name="prompt_book_name">Book Name</string>

    <!-- CreateLibraryActivity -->
    <string name="prompt_library_name">Library Name</string>
    <string name="prompt_librarian_password">Librarian Password</string>
    <string name="prompt_teacher_password">Teacher Password</string>
    <string name="prompt_public_password">Public Password</string>
    <string name="prompt_public_limit">Public Checkout Limit (5)</string>
    <string name="error_used_library_name">Library name is already in use</string>
    <string name="prompt_take_map_picture">Take Library Map Photo</string>
    <string name="error_no_map_photo">Library map not provided</string>
    <string name="prompt_lend_time">Lend Days (14)</string>
    <string name="prompt_daily_fee">Daily Late Fee (0.00)</string>

</resources>
