<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context="com.example.patrick.library.AdvancedMenuActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" >
    </include>

    <Button
        android:id="@+id/go_to_create_library"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/create_library" />

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="48dp"
        android:background="@android:color/darker_gray" />

    <TextView
        android:id="@+id/advanced_librarians_only"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/librarians_only" />

    <Button
        android:id="@+id/go_to_add_book"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/add_book" />

    <Button
        android:id="@+id/go_to_checkout_books"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkout_books" />

    <Button
        android:id="@+id/go_to_return_books"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prompt_return" />

</LinearLayout>
