<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context="com.example.patrick.library.CreateBookActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" >
    </include>

    <ProgressBar
        android:id="@+id/create_book_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="16dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/create_book_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_horizontal">

            <EditText
                android:id="@+id/bookName"
                android:layout_width="wrap_content"
                android:layout_height="46dp"
                android:layout_marginTop="72dp"
                android:ems="10"
                android:hint="@string/prompt_book_name"
                android:inputType="none"
                android:singleLine="true" />

            <EditText
                android:id="@+id/authorFirstName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/prompt_author_first_name"
                android:inputType="none"
                android:singleLine="true" />

            <EditText
                android:id="@+id/authorLastName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/prompt_author_last_name"
                android:inputType="none"
                android:singleLine="true" />

            <EditText
                android:id="@+id/yearPublished"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/prompt_year_published"
                android:inputType="none"
                android:singleLine="true" />

            <EditText
                android:id="@+id/quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/prompt_quantity"
                android:inputType="none|textPersonName"
                android:singleLine="true" />

            <Button
                android:id="@+id/createBookButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/create_book"
                android:layout_marginTop="32dp" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
